--- a/01_sass_basics_pj/sass-basics.html
+++ b/01_sass_basics_pj/sass-basics.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="box1">
-            <div id="box1-title">box1</div>
+            box1<br>
             <a href="#!">button1</a>
             <div id="box2">
                 box2<br />
