--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -5,7 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Lorem</title>
+
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
+
+        <header>
+            <div id="logo-text">Lorem</div>
+            <div id="header-text">
+                <h2 id="header-text-main">
+                    Lorem ipsum dolor sit amet,<br>consectetur
+                </h2>
+                <p id="header-text-sub">
+                    Duis aute irure dolor in reprehenderit in voluptate
+                </p>
+            </div>
+        </header>
+
     </body>
 </html>
