[Lorem - Project] - main html
>> 메인 - 마크업 작업
>> 아이콘 - 구글 웹폰트 아이콘 적용
   1. https://google.github.io/material-design-icons/#getting-icons

   2. 구글 웹폰트 아이콘 cdn
   <link
        href="https://fonts.googleapis.com/icon?family=Material+Icons"
        rel="stylesheet">

   3. 아이콘 리스트
   https://material.io/resources/icons

--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -23,7 +23,59 @@
         </header>
 
         <main>
-            main
+            
+            <section id="section-about">
+                <h2>From its medieval origins to the digital era</h2>
+                <div id="section-about-words">
+                    <h3>HISTORY, PURPOSE AND USAGE</h3>
+                    <p>
+                        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with
+                    </p>
+                    <a href="#!" class="btn-text">Read More</a>
+                    <a href="#!" class="btn-text">Read More</a>
+                </div>
+                <div id="section-about-photo">
+                    <div class="photo"><img src="images/photo-1.jpg" alt=""></div>
+                    <div class="photo"><img src="images/photo-2.jpg" alt=""></div>
+                </div>
+            </section>
+
+            <section id="section-etc">
+                <div id="etc-1">
+                    <div class="etc-icon">
+                        <i class="material-icons">schedule</i>
+                    </div>
+                    <div class="etc-text">
+                        <h3>lorem ipsum is to create</h3>
+                        <p>
+                            The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.)
+                        </p>
+                    </div>
+                </div>
+                <div id="etc-2">
+                    <div class="etc-icon">
+                        <i class="material-icons">track_changes</i>
+                    </div>
+                    <div class="etc-text">
+                        <h3>lorem ipsum is to create</h3>
+                        <p>
+                            The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.)
+                        </p>
+                    </div>
+                </div>
+                <div id="etc-3">
+                    <div class="etc-icon">
+                        <i class="material-icons">settings_power</i>
+                    </div>
+                    <div class="etc-text">
+                        <h3>lorem ipsum is to create</h3>
+                        <p>
+                            The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.)
+                        </p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer>
