[Lorem - Project] - main - h2, h3, btn
>> sass > base > _typo - 폰트(타이포 그래피) 관련 css
   : h2, h3

>> sass > components 폴더 생성
   - 컨트롤하는 요소들을 components 폴더에 따로 만들어서 관리
     : 메뉴, 버튼 등

>> sass > components > _button - 버튼 관련 css

--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -13,9 +13,9 @@
         <header>
             <div id="logo-text">Lorem</div>
             <div id="header-text">
-                <h2 id="header-text-main">
+                <div id="header-text-main">
                     Lorem ipsum dolor sit amet,<br>consectetur
-                </h2>
+                </div>
                 <p id="header-text-sub">
                     Duis aute irure dolor in reprehenderit in voluptate
                 </p>
