--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -31,7 +31,7 @@
                     <p>
                         Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with
                     </p>
-                    <a href="#!" class="btn-text">Read More</a>
+                    <a href="#!" class="btn-text u-margin-right-small">Read More</a>
                     <a href="#!" class="btn-text">Read More</a>
                 </div>
                 <div id="section-about-photo">
