[Lorem - Project] - main complete (1차 완료)
>> 1차 메인 작업 완 (pc형 기준)
>> 규칙성 있는 속성값에 css 적용할 때
   id="etc-1", id="etc-2", id="etc-3"  =>  [id^="etc-"] { }
   img src="image1/~~"                 =>  [src^="image1/"] { }

--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -41,7 +41,7 @@
             </section>
 
             <section id="section-etc">
-                <div id="etc-1">
+                <div id="etc-1" class="etc">
                     <div class="etc-icon">
                         <i class="material-icons">schedule</i>
                     </div>
@@ -52,7 +52,7 @@
                         </p>
                     </div>
                 </div>
-                <div id="etc-2">
+                <div id="etc-2" class="etc">
                     <div class="etc-icon">
                         <i class="material-icons">track_changes</i>
                     </div>
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                 </div>
-                <div id="etc-3">
+                <div id="etc-3" class="etc">
                     <div class="etc-icon">
                         <i class="material-icons">settings_power</i>
                     </div>
