--- a/02_lorem_pj/index.html
+++ b/02_lorem_pj/index.html
@@ -10,6 +10,35 @@
     </head>
     <body>
 
+        <nav class="nav">
+            <input type="checkbox" name="nav-toggle" id="nav-toggle" class="nav-checkbox">
+            <label for="nav-toggle" class="nav-button">
+                <span class="nav-icon"></span>
+            </label>
+
+            <div class="nav-bg">&nbsp;</div>
+
+            <div class="nav-body">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#!" class="nav-link">
+                            <span>01</span> Nav Menu Item
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="nav-link">
+                            <span>02</span> Nav Menu Item
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="nav-link">
+                            <span>03</span> Nav Menu Item
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
         <header>
             <div id="logo-text">Lorem</div>
             <div id="header-text">
